# TypedRedex

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cabal.project  hie.yaml  typedredex.cabal
examples/pcf-step/: Main.hs  Rules.hs  example-pcf-step.cabal
examples/poly/: Main.hs  Properties.hs  Rules.hs  Syntax.hs  Test.hs  TestTypeCheck.hs  Typeset.hs  example-poly.cabal
examples/stlc-bidir/: Rules.hs  example-stlc-bidir.cabal
examples/stlc-bidir-free/: Main.hs  Rules.hs  example-stlc-bidir-free.cabal
examples/system-f/: Rules.hs  Syntax.hs  example-system-f.cabal
experimental/typedredex-free/: README.md  typedredex-free.cabal
experimental/typedredex-free/examples/stlc-bidir/: Main.hs  Rel.hs  Rules.hs
experimental/typedredex-free/src/TypedRedex/: Free.hs
experimental/typedredex-free/src/TypedRedex/Free/: Display.hs  Logic.hs  Moded.hs  RuleF.hs  Schedule.hs
experimental/typedredex-freedeep/: README.md  typedredex-freedeep.cabal
experimental/typedredex-freedeep/examples/: ModeErrorsMain.hs  Simple.hs  SystemFNominalMain.hs  Tests.hs  TracePartialMain.hs
experimental/typedredex-freedeep/examples/Example/: ModeErrors.hs  Pcf.hs  Poly.hs  Stlc.hs  StlcPlus.hs  SystemFNominal.hs  TracePartial.hs
experimental/typedredex-freedeep/examples/Support/: Nat.hs
experimental/typedredex-freedeep/examples/projects/ModeErrors/: Main.hs  Syntax.hs
experimental/typedredex-freedeep/examples/projects/Pcf/: Rules.hs
experimental/typedredex-freedeep/examples/projects/Poly/: Main.hs  Rules.hs  Syntax.hs
experimental/typedredex-freedeep/examples/projects/Stlc/: Main.hs  Rules.hs
experimental/typedredex-freedeep/examples/projects/StlcPlus/: Main.hs  Syntax.hs
experimental/typedredex-freedeep/examples/projects/SystemFNominal/: Main.hs  Rules.hs  Syntax.hs
experimental/typedredex-freedeep/examples/projects/TracePartial/: Syntax.hs
experimental/typedredex-freedeep/src/TypedRedex/: DSL.hs  Nominal.hs  Pretty.hs
experimental/typedredex-freedeep/src/TypedRedex/Backend/: Engine.hs  Eval.hs  Goal.hs
experimental/typedredex-freedeep/src/TypedRedex/Core/: IxFree.hs  RuleF.hs  Schedule.hs  Term.hs
experimental/typedredex-hkt/: README.md  typedredex-hkt.cabal
experimental/typedredex-hkt/src/HKT/: Core.hs
shallow-kanren-fresh/: DESIGN.md  shallow-kanren-fresh-prototype.cabal
shallow-kanren-fresh/examples-fresh/fresh-lambda/: Main.hs
shallow-kanren-fresh/examples-fresh/stlc-bidir/: Main.hs
shallow-kanren-fresh/src-fresh/Shallow/Interpreters/: SubstKanrenFresh.hs
shallow-kanren-fresh/src-fresh/Shallow/Utils/: Kanren.hs
shallow-kanren-minimal/: README.md  shallow-kanren-minimal.cabal
shallow-kanren-minimal/examples/hm-inference/: Main.hs
shallow-kanren-minimal/examples/lambda-step/: Main.hs
shallow-kanren-minimal/examples/pcf-step/: Main.hs
shallow-kanren-minimal/examples/pcf-step-rule/: Main.hs
shallow-kanren-minimal/examples/poly-infer/: Main.hs
shallow-kanren-minimal/examples/pure-binding/: Main.hs
shallow-kanren-minimal/examples/stlc-bidir/: Main.hs
shallow-kanren-minimal/examples/system-f/: Main.hs
shallow-kanren-minimal/examples/test-unbound/: Main.hs
shallow-kanren-minimal/src/Shallow/Core/: Kanren.hs
shallow-kanren-minimal/src/Shallow/Interpreters/: DeepKanren.hs  SubstKanren.hs  TracingKanren.hs
shallow-kanren-minimal/src/Shallow/Utils/: Kanren.hs  Rule.hs  Type.hs
typed-redex/: Derivation.md  ImproveSuggest.md  PremFirst.md  Refactor.md  RefactorPlan.md  SyntaxNoise.md  typed-redex.cabal
typed-redex/docs/: AlphaKanren.md  BindingFeature.md  HList-Refactoring-Explained.md  binding-bound-inspired.md  binding-proposal2.md  binding-proposals.md  binding-revised.md  deep-interpreter-explained.md  modes.md  typesetting-interpreter-explained.md
typed-redex/examples/hm-inference/: Main.hs
typed-redex/examples/mode-indexed/: IndexedRule.hs  Main.hs
typed-redex/examples/neg-test/: Main.hs  NegRules.hs
typed-redex/examples/negation-test/: Main.hs
typed-redex/examples/pcf-step/: Main.hs  Rules.hs
typed-redex/examples/pcf-step-rule/: Main.hs
typed-redex/examples/poly/: Main.hs  Properties.hs  Rules.hs  Syntax.hs  Typeset.hs
typed-redex/examples/poly-infer/: Main.hs
typed-redex/examples/pure-binding/: Main.hs
typed-redex/examples/stlc-bidir/: Main.hs  Rules.hs
typed-redex/examples/stlc-bidir-moded/: Main.hs
typed-redex/examples/system-f/: Main.hs  Rules.hs  Syntax.hs
typed-redex/examples/system-f-moded/: Main.hs  Syntax.hs
typed-redex/examples/test-unbound/: Main.hs
typed-redex/src/: TypedRedex.hs
typed-redex/src/TypedRedex/: Nominal.hs
typed-redex/src/TypedRedex/Core/: Redex.hs
typed-redex/src/TypedRedex/DSL/: Define.hs  Fresh.hs  Moded.hs  TH.hs  Type.hs
typed-redex/src/TypedRedex/Interp/: Deep.hs  Format.hs  PrettyPrint.hs  Run.hs  Stream.hs  Subst.hs  Tracing.hs  Typesetting.hs
typed-redex/src/TypedRedex/Interpreters/: DeepRedex.hs  SubstRedex.hs  TracingRedex.hs
typed-redex/src/TypedRedex/Nominal/: Bind.hs  Hash.hs  Nom.hs  Prelude.hs  Subst.hs
typed-redex/src/TypedRedex/Test/: Property.hs
typed-redex/src/TypedRedex/Utils/: Define.hs  Format.hs  Fresh.hs  PrettyPrint.hs  Redex.hs  Relation.hs  Rule.hs  Run.hs  Type.hs
typedredex-dsl/: typedredex-dsl.cabal
typedredex-dsl/src/TypedRedex/: Nominal.hs
typedredex-dsl/src/TypedRedex/DSL/: Define.hs  Eval.hs  Fresh.hs  Moded.hs  Relation.hs  TH.hs  Type.hs
typedredex-dsl/src/TypedRedex/Nominal/: Bind.hs  Hash.hs  Nom.hs  Prelude.hs  Subst.hs
typedredex-free/: typedredex-free.cabal
typedredex-free/src/TypedRedex/: Free.hs
typedredex-free/src/TypedRedex/Free/: IxFree.hs  Moded.hs  RuleF.hs
typedredex-interp/: typedredex-interp.cabal
typedredex-interp/src/: TypedRedex.hs
typedredex-interp/src/TypedRedex/Interp/: Display.hs  Format.hs  PrettyPrint.hs  Run.hs  Stream.hs  Subst.hs  Tracing.hs  Typesetting.hs
typedredex-logic/: typedredex-logic.cabal
typedredex-logic/src/TypedRedex/: Logic.hs
typedredex-logic/src/TypedRedex/Logic/: Display.hs  Nominal.hs  Redex.hs  SubstCore.hs  Term.hs  Unify.hs
(+94 files in other folders)
