cabal-version:      3.0
name:               typedredex
version:            0.1.0.0
synopsis:           Pure AST TypedRedex with multiple interpreters
license:            MIT
author:             Xu Xue
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-unticked-promoted-constructors

library
    import:           warnings
    exposed-modules:
        TypedRedex.DSL
        TypedRedex.Core.Term
        TypedRedex.Core.IxFree
        TypedRedex.Core.Schedule
        TypedRedex.Core.RuleF
        TypedRedex.Render
        TypedRedex.Pretty
        TypedRedex.Interp.MCheck
        TypedRedex.Interp.Typeset
        TypedRedex.Interp.Trace
        TypedRedex.Backend.Goal
        TypedRedex.Backend.Engine
        TypedRedex.Backend.Eval
        TypedRedex.Backend.Query
        TypedRedex.Nominal
        TypedRedex.Nominal.Bind
        TypedRedex.Nominal.Prelude
    build-depends:
        base >= 4.17 && < 5,
        containers,
        mtl
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        LambdaCase
        TypeOperators
        RankNTypes
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        UndecidableInstances
        ConstraintKinds
        PolyKinds
        StandaloneKindSignatures
        AllowAmbiguousTypes

executable example-lcti
    import:           warnings
    main-is:          LCTI/Main.hs
    other-modules:
        LCTI.Syntax
        LCTI.Rules
    build-depends:
        base >= 4.17 && < 5,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is LCTI.Main

executable example-poly
    import:           warnings
    main-is:          Poly/Main.hs
    other-modules:
        Poly.Syntax
        Poly.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is Poly.Main