cabal-version:      3.0
name:               typedredex
version:            0.1.0.0
synopsis:           Pure AST TypedRedex with multiple interpreters
license:            MIT
author:             Xu Xue
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-unticked-promoted-constructors

library
    import:           warnings
    exposed-modules:
        TypedRedex.DSL
        TypedRedex.Core.Term
        TypedRedex.Core.IxFree
        TypedRedex.Core.Schedule
        TypedRedex.Core.RuleF
        TypedRedex.Render
        TypedRedex.Pretty
        TypedRedex.Interp.MCheck
        TypedRedex.Interp.Typeset
        TypedRedex.Interp.Trace
        TypedRedex.Backend.Goal
        TypedRedex.Backend.Engine
        TypedRedex.Backend.Eval
        TypedRedex.Backend.Query
        TypedRedex.Nominal
        TypedRedex.Nominal.Bind
        TypedRedex.Nominal.Prelude
    build-depends:
        base >= 4.17 && < 5,
        containers,
        mtl
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        LambdaCase
        TypeOperators
        RankNTypes
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        UndecidableInstances
        ConstraintKinds
        PolyKinds
        StandaloneKindSignatures
        AllowAmbiguousTypes

executable example-lcti
    import:           warnings
    main-is:          LCTI/Main.hs
    other-modules:
        LCTI.Syntax
        LCTI.Rules
    build-depends:
        base >= 4.17 && < 5,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is LCTI.Main

executable example-lti
    import:           warnings
    main-is:          LTI/Main.hs
    other-modules:
        LTI.Syntax
        LTI.Rules
    build-depends:
        base >= 4.17 && < 5,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is LTI.Main

executable example-poly
    import:           warnings
    main-is:          Poly/Main.hs
    other-modules:
        Poly.Syntax
        Poly.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is Poly.Main

executable example-polyweak
    import:           warnings
    main-is:          PolyWeak/Main.hs
    other-modules:
        PolyWeak.Syntax
        PolyWeak.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is PolyWeak.Main

executable example-stlc
    import:           warnings
    main-is:          STLC/Main.hs
    other-modules:
        STLC.Syntax
        STLC.Rules
        STLC.Gen
        STLC.Properties
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        QuickCheck,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is STLC.Main

executable example-signal
    import:           warnings
    main-is:          Signal/Main.hs
    other-modules:
        Signal.Syntax
        Signal.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is Signal.Main
