cabal-version:      3.0
name:               typedredex
version:            0.1.0.0
synopsis:           Typed Haskell embedding for Redex-style semantics
description:
    TypedRedex is an embedded Haskell DSL for specifying judgments,
    reduction rules, and semantic relations as a typed AST.
    .
    The same rule set can be evaluated, traced as partial derivations,
    typeset for documentation, or analyzed with a mode checker.
license:            MIT
license-file:       LICENSE
author:             Xu Xue
maintainer:         Xu Xue
copyright:          2025-2026 Xu Xue
homepage:           https://github.com/juniorxxue/TypedRedex
bug-reports:        https://github.com/juniorxxue/TypedRedex/issues
category:           Language
stability:          experimental
build-type:         Simple
tested-with:        GHC == 9.6.7
extra-doc-files:
    CONTRIBUTING.md
    README.md

source-repository head
    type:           git
    location:       https://github.com/juniorxxue/TypedRedex.git

common warnings
    ghc-options: -Wall -Wno-unticked-promoted-constructors

library
    import:           warnings
    exposed-modules:
        TypedRedex.DSL
        TypedRedex.Core.Term
        TypedRedex.Core.IxFree
        TypedRedex.Core.Schedule
        TypedRedex.Core.RuleF
        TypedRedex.Render
        TypedRedex.Pretty
        TypedRedex.Interp.MCheck
        TypedRedex.Interp.Typeset
        TypedRedex.Interp.Trace
        TypedRedex.Backend.Goal
        TypedRedex.Backend.Engine
        TypedRedex.Backend.Eval
        TypedRedex.Backend.Query
        TypedRedex.Nominal
        TypedRedex.Nominal.Bind
        TypedRedex.Nominal.Prelude
    build-depends:
        base >= 4.17 && < 5,
        containers >= 0.6 && < 0.8,
        mtl >= 2.2 && < 2.4
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        LambdaCase
        TypeOperators
        RankNTypes
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        UndecidableInstances
        ConstraintKinds
        PolyKinds
        StandaloneKindSignatures
        AllowAmbiguousTypes

executable example-lcti
    import:           warnings
    main-is:          LCTI/Main.hs
    other-modules:
        LCTI.Syntax
        LCTI.Rules
    build-depends:
        base >= 4.17 && < 5,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is LCTI.Main

executable example-stlc
    import:           warnings
    main-is:          STLC/Main.hs
    other-modules:
        STLC.Syntax
        STLC.Rules
        STLC.Gen
        STLC.Properties
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        QuickCheck >= 2.14 && < 2.19,
        typedredex
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is STLC.Main

