cabal-version:      2.4
name:               shallow-kanren-minimal
version:            0.1.0.0
license:            MIT
author:             Migrated from uKanren_transformations (shallow-embedding)
maintainer:         you@example.com
build-type:         Simple

library
  hs-source-dirs:   src
  exposed-modules:
    Stream
    Shallow.Core.Kanren
    Shallow.Core.Internal.Kanren
    Shallow.Core.Internal.Logic
    Shallow.Interpreters.SubstKanren
    Shallow.Utils.Kanren
    Shallow.Utils.Type
  build-depends:
    base >=4.12 && <5,
    mtl  >=2.2  && <3
  default-language: Haskell2010

executable example-lambda-step
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base >=4.12 && <5,
    shallow-kanren-minimal,
    mtl  >=2.2  && <3
  default-language: Haskell2010
