cabal-version:      2.4
name:               typed-redex
version:            0.1.0.0
license:            MIT
author:             Migrated from uKanren_transformations (shallow-embedding)
maintainer:         you@example.com
build-type:         Simple

library
  hs-source-dirs:   src
  exposed-modules:
    -- Main public API
    TypedRedex
    -- Nominal logic support
    TypedRedex.Nominal
    TypedRedex.Nominal.Nom
    TypedRedex.Nominal.Bind
    TypedRedex.Nominal.Subst
    TypedRedex.Nominal.Prelude
    TypedRedex.Nominal.Hash
    -- Core layer (internal)
    TypedRedex.Core.Internal.Redex
    TypedRedex.Core.Internal.Logic
    TypedRedex.Core.Internal.Unify
    TypedRedex.Core.Internal.SubstCore
    TypedRedex.Core.Internal.Relation
    -- DSL layer (user-facing)
    TypedRedex.DSL.Fresh
    TypedRedex.DSL.Define
    TypedRedex.DSL.Moded
    TypedRedex.DSL.Type
    TypedRedex.DSL.TH
    -- Interpreter layer
    TypedRedex.Interp.Stream
    TypedRedex.Interp.Subst
    TypedRedex.Interp.Tracing
    TypedRedex.Interp.Deep
    TypedRedex.Interp.Run
    TypedRedex.Interp.Format
    TypedRedex.Interp.PrettyPrint
  build-depends:
    base >=4.12 && <5,
    mtl  >=2.2  && <3,
    template-haskell >=2.14
  default-language: Haskell2010

executable example-stlc-bidir
  hs-source-dirs:   examples/stlc-bidir
  main-is:          Main.hs
  build-depends:
    base >=4.12 && <5,
    typed-redex,
    mtl  >=2.2  && <3
  default-language: Haskell2010

executable example-pcf-step
  hs-source-dirs:   examples/pcf-step
  main-is:          Main.hs
  build-depends:
    base >=4.12 && <5,
    typed-redex,
    mtl  >=2.2  && <3
  default-language: Haskell2010

executable example-system-f
  hs-source-dirs:   examples/system-f
  main-is:          Main.hs
  other-modules:    Syntax
  build-depends:
    base >=4.12 && <5,
    typed-redex,
    mtl  >=2.2  && <3
  default-language: Haskell2010

executable example-mode-indexed
  hs-source-dirs:   examples/mode-indexed
  main-is:          Main.hs
  other-modules:    IndexedRule
  build-depends:
    base >=4.12 && <5
  default-language: Haskell2010

executable example-moded-demo
  hs-source-dirs:   examples/moded-demo
  main-is:          Main.hs
  build-depends:
    base >=4.12 && <5,
    typed-redex,
    mtl  >=2.2  && <3
  default-language: Haskell2010

executable example-stlc-bidir-moded
  hs-source-dirs:   examples/stlc-bidir-moded
  main-is:          Main.hs
  build-depends:
    base >=4.12 && <5,
    typed-redex,
    mtl  >=2.2  && <3
  default-language: Haskell2010

executable example-system-f-moded
  hs-source-dirs:   examples/system-f-moded
  main-is:          Main.hs
  other-modules:    Syntax
  build-depends:
    base >=4.12 && <5,
    typed-redex,
    mtl  >=2.2  && <3
  default-language: Haskell2010
