cabal-version:      2.4
name:               typedredex-free
version:            0.1.0.0
synopsis:           Indexed Free Monad DSL for TypedRedex
description:
  An alternative DSL layer for TypedRedex using indexed free monads.
  This approach provides:

  * Complete separation of syntax and semantics
  * Pure AST construction via do-notation
  * Multiple interpreters: eval, typeset, trace
  * Compile-time mode checking via type-level state
  * Same user-facing API as typedredex-dsl

license:            MIT
author:             TypedRedex Authors
maintainer:         you@example.com
build-type:         Simple

library
  hs-source-dirs:   src
  exposed-modules:
    TypedRedex.Free
    TypedRedex.Free.IxFree
    TypedRedex.Free.RuleF
    TypedRedex.Free.Moded
    TypedRedex.Free.Schedule
    TypedRedex.Free.Interp.Eval
    TypedRedex.Free.Interp.Trace
    TypedRedex.Free.Interp.Typeset
  build-depends:
    base >=4.12 && <5,
    typedredex-logic,
    containers,
    mtl >=2.2
  default-language: Haskell2010
  ghc-options:      -Wall
  default-extensions:
    GADTs
    DataKinds
    TypeFamilies
    TypeOperators
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    UndecidableInstances
    ConstraintKinds
    AllowAmbiguousTypes
    StandaloneKindSignatures
