cabal-version:      2.4
name:               typedredex-interp
version:            0.1.0.0
synopsis:           Interpreter layer for TypedRedex
description:
  Interpreter implementations for TypedRedex including the substitution-based
  interpreter, lazy streams for backtracking search, and pretty-printing utilities.

license:            MIT
author:             TypedRedex Authors
maintainer:         you@example.com
build-type:         Simple

library
  hs-source-dirs:   src
  exposed-modules:
    TypedRedex
    TypedRedex.Interp.Stream
    TypedRedex.Interp.PrettyPrint
    TypedRedex.Interp.Subst
    TypedRedex.Interp.Run
    TypedRedex.Interp.Format
    TypedRedex.Interp.Display
    TypedRedex.Interp.Tracing
    TypedRedex.Interp.Typesetting
    TypedRedex.Test.Property
  build-depends:
    base >=4.12 && <5,
    typedredex-logic,
    typedredex-dsl,
    containers,
    mtl >=2.2,
    QuickCheck >=2.14 && <3
  default-language: Haskell2010
  ghc-options:      -Wall
