cabal-version:      2.4
name:               example-poly
version:            0.1.0.0
synopsis:           Poly type inference example for TypedRedex
license:            MIT
build-type:         Simple

executable example-poly
  main-is:          Main.hs
  other-modules:
    Syntax
    Rules
    Typeset
  hs-source-dirs:   .
  build-depends:
    base >=4.12 && <5,
    typedredex-logic,
    typedredex-dsl,
    typedredex-interp,
    containers,
    QuickCheck >=2.14 && <3
  default-language: Haskell2010
  ghc-options:      -Wall

executable poly-test
  main-is:          Test.hs
  other-modules:
    Syntax
    Rules
  hs-source-dirs:   .
  build-depends:
    base >=4.12 && <5,
    typedredex-logic,
    typedredex-dsl,
    typedredex-interp,
    containers
  default-language: Haskell2010
  ghc-options:      -Wall
