cabal-version:      2.4
name:               example-stlc-bidir-free
version:            0.1.0.0
synopsis:           Bidirectional STLC using Indexed Free Monad DSL
description:
  Example demonstrating the indexed free monad DSL for mode-checked
  bidirectional typing rules.

license:            MIT
author:             TypedRedex Authors
maintainer:         you@example.com
build-type:         Simple

executable example-stlc-bidir-free
  main-is:          Main.hs
  other-modules:    Rules
  hs-source-dirs:   .
  build-depends:
    base >=4.12 && <5,
    typedredex-logic,
    typedredex-free,
    containers
  default-language: Haskell2010
  ghc-options:      -Wall
  default-extensions:
    GADTs
    DataKinds
    TypeFamilies
    TypeOperators
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    ScopedTypeVariables
    RebindableSyntax
