cabal-version:      2.4
name:               example-stlc-bidir
version:            0.1.0.0
synopsis:           Bidirectional STLC example for TypedRedex
license:            MIT
build-type:         Simple

executable example-stlc-bidir
  main-is:          Main.hs
  other-modules:
    Rules
  hs-source-dirs:   .
  build-depends:
    base >=4.12 && <5,
    typedredex-logic,
    typedredex-dsl,
    typedredex-interp
  default-language: Haskell2010
  ghc-options:      -Wall
