cabal-version:      2.4
name:               example-system-f
version:            0.1.0.0
synopsis:           System F example for TypedRedex
license:            MIT
build-type:         Simple

executable example-system-f
  main-is:          Main.hs
  other-modules:
    Syntax
    Rules
  hs-source-dirs:   .
  build-depends:
    base >=4.12 && <5,
    typedredex-logic,
    typedredex-dsl,
    typedredex-interp,
    containers
  default-language: Haskell2010
  ghc-options:      -Wall
