cabal-version:      2.4
name:               typedredex-free
version:            0.1.0.0
synopsis:           Indexed Free Monad DSL for TypedRedex
description:        An implementation of an indexed free monad DSL for TypedRedex, a
                    framework for defining and working with typed term rewriting systems.

license:            MIT
author:             TypedRedex Authors
maintainer:         you@example.com
build-type:         Simple

library
  hs-source-dirs:   src
  exposed-modules:
    TypedRedex.Free
    TypedRedex.Free.Logic
    TypedRedex.Free.IxFree
    TypedRedex.Free.RuleF
    TypedRedex.Free.Moded
    TypedRedex.Free.Schedule
    TypedRedex.Free.Interp.Eval
    TypedRedex.Free.Interp.Trace
    TypedRedex.Free.Interp.Typeset
  build-depends:
    base >=4.12 && <5,
    ghc-typelits-natnormalise >= 0.7,
    containers,
    mtl >=2.2
  default-language: Haskell2010
  ghc-options:      -Wall
  default-extensions:
    GADTs
    DataKinds
    TypeFamilies
    TypeOperators
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    UndecidableInstances
    ConstraintKinds
    AllowAmbiguousTypes
    StandaloneKindSignatures

executable stlc-bidir-demo
  hs-source-dirs:   examples/stlc-bidir
  main-is:          Main.hs
  other-modules:    Rules, Rel
  build-depends:
    base >=4.12 && <5,
    typedredex-free,
    containers
  default-language: Haskell2010
  ghc-options:      -Wall
  default-extensions:
    GADTs
    DataKinds
    TypeFamilies
    TypeOperators
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
