cabal-version:      3.0
name:               typedredex-freedeep
version:            0.1.0.0
synopsis:           Pure AST TypedRedex with multiple interpreters
license:            MIT
author:             Xu Xue
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-unticked-promoted-constructors

library
    import:           warnings
    exposed-modules:
        TypedRedex.DSL
        TypedRedex.Core.Term
        TypedRedex.Core.IxFree
        TypedRedex.Core.Schedule
        TypedRedex.Core.RuleF
        TypedRedex.Pretty
        TypedRedex.Interp.Typeset
        TypedRedex.Interp.Trace
        TypedRedex.Backend.Goal
        TypedRedex.Backend.Engine
        TypedRedex.Backend.Eval
        TypedRedex.Backend.Query
        TypedRedex.Nominal
        TypedRedex.Nominal.Bind
        TypedRedex.Nominal.Prelude
    build-depends:
        base >= 4.17 && < 5,
        containers,
        mtl
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        LambdaCase
        TypeOperators
        RankNTypes
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        UndecidableInstances
        ConstraintKinds
        PolyKinds
        StandaloneKindSignatures
        AllowAmbiguousTypes

executable example-simple
    import:           warnings
    main-is:          Simple.hs
    other-modules:
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
        QualifiedDo

executable example-tests
    import:           warnings
    main-is:          Tests.hs
    other-modules:
        Example.Stlc
        Example.Pcf
        Example.Poly
        Example.ModeErrors
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
        QualifiedDo

executable example-mode-errors
    import:           warnings
    main-is:          ModeErrorsMain.hs
    other-modules:
        Example.ModeErrors
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
        QualifiedDo

executable example-trace-partial
    import:           warnings
    main-is:          TracePartialMain.hs
    other-modules:
        Example.TracePartial
        Example.Stlc
        Example.StlcPlus
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
        QualifiedDo

executable example-systemf-nominal
    import:           warnings
    main-is:          SystemFNominalMain.hs
    other-modules:
        Example.SystemFNominal
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
        QualifiedDo
